--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,7 +23,10 @@ p{
 .img22{
 	width: 100%;
 	clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
-
+}
+.avatar{
+	width: 20%;
+	border-radius: 50%;
 }
 
 .contenedor{
