:art: improve structure
improve structure and format of the code

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -30,7 +30,19 @@ p{
 }
 
 .contenedor{
-	width: 80%;
+	width: 50%;
+	margin-left: 25%;
+}
+.formulario input,.formulario textarea{
+	color: white;
+	background: none;
+}
+.formulario input::placeholder, .formulario textarea::placeholder{
+	color: white;
+}
+.formulario input:focus, .formulario textarea:focus{
+	background: none !important;
+	color: white;
 }
 li{
 	list-style: none;
